<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/greet"
            android:id="@+id/text" />

        <Button
            android:id="@+id/btn_tr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Turkish" />

        <Button
            android:id="@+id/btn_en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/English" />


        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/firstNumberTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_number" />
        <EditText
            android:id="@+id/firstNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned">
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/secondNumberTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/second_number" />

        <EditText
            android:id="@+id/secondNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned" />


        <RadioGroup
            android:id="@+id/radioGroupOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <RadioButton
                android:id="@+id/addRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/add_radiobut" />
            <RadioButton
                android:id="@+id/subtractRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_radiobut" />
            <RadioButton
                android:id="@+id/multiplyRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mult_radiobut"/>
            <RadioButton
                android:id="@+id/divideRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/div_radiobut" />
        </RadioGroup>
        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result" />
        <Button
            android:id="@+id/calculateButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:onClick="calculateButtonClick" />

        <View
            android:id="@+id/dividerr"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="?android:attr/listDivider" />

        <ToggleButton
            android:text="Convert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/toggleButton"
            android:textOn="C->F"
            android:textOff="F->C"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|numberSigned"
            android:hint="@string/give_temp"
            android:ems="10"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="56dp"
            android:id="@+id/editText" />

        <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toggleButton"
            android:layout_alignStart="@+id/toggleButton"
            android:layout_marginTop="42dp"
            android:id="@+id/button"
            />

        <View
            android:id="@+id/dividerrr"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="?android:attr/listDivider" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/et_a"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="a"
            android:inputType="numberDecimal|numberSigned"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/et_b"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="b"
            android:inputType="number"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/et_c"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="c"
            android:inputType="numberDecimal|numberSigned"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:id="@+id/b_go" />
        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text=""
            android:textSize="24dp"/>



    </LinearLayout>


</ScrollView>